--- a/spring-boot-quartz-starter/pom.xml
+++ b/spring-boot-quartz-starter/pom.xml
@@ -11,10 +11,9 @@
     <packaging>jar</packaging>
 
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.3.0.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <version>1.0-SNAPSHOT</version>
+        <groupId>com.xian.starter</groupId>
+        <artifactId>spring-basic-starter</artifactId>
     </parent>
     
 <dependencies>
