--- a/spring-boot-rabbit-starter/pom.xml
+++ b/spring-boot-rabbit-starter/pom.xml
@@ -10,9 +10,9 @@
     <description>rabbit-starter</description>
 
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.3.0.RELEASE</version>
+        <version>1.0-SNAPSHOT</version>
+        <groupId>com.xian.starter</groupId>
+        <artifactId>spring-basic-starter</artifactId>
     </parent>
 
 <dependencies>
